2011-04-06 Javier Lanz <javier.lanz@artica.es>

	* include/functions_reporting.php: Added case to display 'agent_module'
	reports
	* include/functions.php: Added the option 'agent_module' for the
	reporting type in combo selecion
	* godmode/reporting/reporting_builder.php: Added options to store
	'agent_module' report info
	* godmode/reporting/reporting_builder.item_editor.php: Added html fields
	 for the 'agent_module' report

2011-04-06  Sergio Martin <sergio.martin@artica.es>

	* include/graphs/pChart/pData.class.php
	include/graphs/pChart/pDraw.class.php: Fixed avoid zero values 
	into area graphs and clean code

2011-04-05 Miguel de Dios  <miguel.dedios@artica.es>
	* include/functions_fsgraph.php, include/functions_graph.php,
	include/graphs/functions_utils.php, include/fgraph.php: cleaned source code
	style.

	* include/functions_graph.php: added first version of function
	"graphic_combined_module2".
	
	* include/graphs/functions_pchart.php: fixed when pass a empty array as
	colour for graphs.
	
	* include/graphs/pChart/pDraw.class.php: fixed to set a color border when
	the graphs haven't a external defined colour.

	* include/graphs/fgraph.php: changed for pass the data to static image graph
	generator.
	
	* operation/agentes/graphs.php: changed to use the new graph engine.

2011-04-04 Miguel de Dios  <miguel.dedios@artica.es>

	* operation/events/events_list.php, operation/events/events.php: fixed
	nested forms incompatible with some browsers that fail when validate
	several events and some errors in javascript when validate individual error.

2011-04-04 Miguel de Dios  <miguel.dedios@artica.es>

	* include/functions_fsgraph.php: added check if loaded the class.

	* include/graphs/functions_fsgraph.php: added check if loaded the class.
	Rename some functions and erased the function "fs_module_chart".

	* include/graphs/functions_pchart.php: erased some debug traces.

	* include/graphs/fgraph.php: cleaned the function "area_graph".
