@@ -58,7 +58,6 @@ function area_graph($flash_chart, $chart_data, $width, $height, $color,$legend, 
 		$graph['legend'] = $legend;
 		
 		serialize_in_temp($graph, $id_graph);
-		session_write_close();
 		
 		return "<img src='http://127.0.0.1/pandora_console/include/graphs/functions_pchart.php?graph_type=area&id_graph=" . $id_graph . "'>";
 	}	
